--- a/.github/workflows/core-outbound-providers.yml
+++ b/.github/workflows/core-outbound-providers.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           ndk-version: r26b
           add-to-path: false
-          local-cache: true
+          local-cache: false
 
       - name: Build core
         env:
