--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.3'
+          go-version: '1.21.4'
 
       - name: Checkout SFA Repository
         uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'oracle'
-          java-version: 20
+          java-version: 21
 
       - name: Build SFA
         run: |
@@ -54,13 +54,13 @@ jobs:
           echo "VERSION_CODE=$(date +%Y%m%d%H)" >> local.properties
           sed -i '/signingConfigs\.release/d' app/build.gradle
           chmod +x ./gradlew
-          ./gradlew assembleRelease
+          ./gradlew :app:assemblePlayRelease
 
       - name: Sign SFA
         uses: r0adkll/sign-android-release@v1
         id: sign_app
         with:
-             releaseDirectory: SFA/app/build/outputs/apk/other/release
+             releaseDirectory: SFA/app/build/outputs/apk/play/release
              signingKeyBase64: ${{ secrets.SIGNING_KEY }}
              alias: ${{ secrets.ALIAS }}
              keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
@@ -70,4 +70,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: SFA
-          path: SFA/app/build/outputs/apk/other/release/*arm64-v8a-unsigned-signed.apk
+          path: SFA/app/build/outputs/apk/play/release/*arm64-v8a-unsigned-signed.apk
