--- a/.github/workflows/sfa-e5.yml
+++ b/.github/workflows/sfa-e5.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.1'
+          go-version: '1.21.4'
 
       - name: Checkout SFA Repository
         uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'oracle'
-          java-version: 20
+          java-version: 21
 
       - name: Build SFA
         run: |
@@ -52,7 +52,7 @@ jobs:
           echo "VERSION_CODE=$(date +%Y%m%d%H)" >> local.properties
           sed -i '/signingConfigs\.release/d' app/build.gradle
           chmod +x ./gradlew
-          ./gradlew assembleRelease
+          ./gradlew :app:assemblePlayRelease
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
