--- a/.github/workflows/sfa_outbound_providers.yml
+++ b/.github/workflows/sfa_outbound_providers.yml
@@ -53,13 +53,13 @@ jobs:
           echo "VERSION_CODE=$(date +%Y%m%d%H)" >> local.properties
           sed -i '/signingConfigs\.release/d' app/build.gradle
           chmod +x ./gradlew
-          ./gradlew assembleRelease
+          ./gradlew :app:assemblePlayRelease
           
       - name: Sign SFA
         uses: r0adkll/sign-android-release@v1
         id: sign_app
         with:
-             releaseDirectory: SFA/app/build/outputs/apk/release
+             releaseDirectory: SFA/app/build/outputs/apk/play/release
              signingKeyBase64: ${{ secrets.SIGNING_KEY }}
              alias: ${{ secrets.ALIAS }}
              keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
@@ -70,8 +70,8 @@ jobs:
         with:
           name: SFA-arm64-v8a
           path: |
-            SFA/app/build/outputs/apk/release/*-arm64-v8a-signed.apk
-            SFA/app/build/outputs/apk/release/*-arm64-v8a-*-signed.apk
+            SFA/app/build/outputs/apk/play/release/*-arm64-v8a-signed.apk
+            SFA/app/build/outputs/apk/play/release/*-arm64-v8a-*-signed.apk
 
      
       - name: Upload universal artifact
@@ -79,7 +79,7 @@ jobs:
         with:
           name: SFA-universal
           path: |
-            SFA/app/build/outputs/apk/release/*-universal-signed.apk
-            SFA/app/build/outputs/apk/release/*-universal-*-signed.apk
+            SFA/app/build/outputs/apk/play/release/*-universal-signed.apk
+            SFA/app/build/outputs/apk/play/release/*-universal-*-signed.apk
       
       
