--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
          repository: SagerNet/sing-box
-         ref: dev-next
+         ref: main
          fetch-depth: 0
 
       - name: Get latest go version
