--- a/.github/workflows/core-yaott.yml
+++ b/.github/workflows/core-yaott.yml
@@ -1,4 +1,4 @@
-name: Build Core from E5 repo
+name: Build yaott Core 
 
 on:
   workflow_dispatch:
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
-          ref: dev-next
+          repository: debiansid/sing-box
+          ref: dev-next-yaott
 
       - name: Get latest go version
         id: go_version
