--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -1,4 +1,4 @@
-name: Build SFA from official
+name: Build SFA from official main
 
 on:
   workflow_dispatch:
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
          repository: SagerNet/sing-box
-         ref: dev-next
+         ref: main
          fetch-depth: 0
 
       - name: Get latest go version
