--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -14,14 +14,13 @@ jobs:
         uses: actions/checkout@v4
         with:
          repository: SagerNet/sing-box
-         ref: dev-next
          fetch-depth: 0
 
       - name: Get latest go version
         id: go_version
         run: |
           echo go_version=$(curl -s https://raw.githubusercontent.com/actions/go-versions/main/versions-manifest.json | grep -oE '"version": "[0-9]{1}.[0-9]{1,}(.[0-9]{1,})?"' | head -1 | cut -d':' -f2 | sed 's/ //g; s/"//g') >> $GITHUB_OUTPUT
-
+          go run ./cmd/internal/update_android_version
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
