--- a/.github/workflows/core-yaott.yml
+++ b/.github/workflows/core-yaott.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          repository: debiansid/sing-box
-          ref: dev-next-yaott
+          repository: rnetx/sing-box
+          ref: dev
 
       - name: Get latest go version
         id: go_version
