--- a/.github/workflows/dev-next-win.yml
+++ b/.github/workflows/dev-next-win.yml
@@ -1,4 +1,4 @@
-name: build sing-box windows from debiansid
+name: build sing-box windows from E5
 
 on:
   workflow_dispatch:
@@ -23,8 +23,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: debiansid/sing-box
-          ref: dev-next-op
+          repository:  CHIZI-0618/sing-box
+          ref: dev-next
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
