--- a/.github/workflows/sfa-rnetx.yml
+++ b/.github/workflows/sfa-rnetx.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      TAGS: with_gvisor,with_quic,with_utls,with_clash_api,with_proxyprovider
+      TAGS: with_gvisor,with_quic,with_utls,with_clash_api,with_proxyprovider,with_conntrack
 
     steps:
       - name: Checkout core Repository
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.4'
+          go-version: '1.21.5'
 
       - name: Checkout SFA Repository
         uses: actions/checkout@v4
