--- a/.github/workflows/sfa-rnetx.yml
+++ b/.github/workflows/sfa-rnetx.yml
@@ -56,8 +56,18 @@ jobs:
           chmod +x ./gradlew
           ./gradlew :app:assemblePlayRelease
 
+      - name: Sign SFA
+        uses: r0adkll/sign-android-release@v1
+        id: sign_app
+        with:
+             releaseDirectory: SFA/app/build/outputs/apk/play/release
+             signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+             alias: ${{ secrets.ALIAS }}
+             keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+             keyPassword: ${{ secrets.KEY_PASSWORD }}
+
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: SFA
-          path: SFA/app/build/outputs/apk/
+          path: SFA/app/build/outputs/apk/play/release/*arm64-v8a-unsigned-signed.apk
