--- a/.github/workflows/sfa-rnetx.yml
+++ b/.github/workflows/sfa-rnetx.yml
@@ -18,7 +18,7 @@ jobs:
          fetch-depth: 0
       - name: delete tag
         run: |
-         cd sing-box
+         cd sing-box-build
          git tag -d $(git tag -l)
         
       - name: Get latest go version
