--- a/.github/workflows/sfa-rnetx.yml
+++ b/.github/workflows/sfa-rnetx.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
          repository: rnetx/sing-box
-         ref: dev
+         ref: provider-next
          fetch-depth: 0
       - name: delete tag
         run: |
