--- a/.github/workflows/core-outbound-providers.yml
+++ b/.github/workflows/core-outbound-providers.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          repository: debiansid/sing-box
-          ref: dev-next-op
+          repository: PuerNya/sing-box
+          ref: building
 
       - name: Get latest go version
         id: go_version
@@ -23,9 +23,9 @@ jobs:
           echo go_version=$(curl -s https://raw.githubusercontent.com/actions/go-versions/main/versions-manifest.json | grep -oE '"version": "[0-9]{1}.[0-9]{1,}(.[0-9]{1,})?"' | head -1 | cut -d':' -f2 | sed 's/ //g; s/"//g') >> $GITHUB_OUTPUT
 
       - name: Setup Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v4.1.0
         with:
-          go-version: '1.21.4'
+          go-version: '1.21.5'
 
       - name: Setup NDK
         uses: nttld/setup-ndk@v1
