--- a/.github/workflows/dev-next-win.yml
+++ b/.github/workflows/dev-next-win.yml
@@ -1,4 +1,4 @@
-name: build sing-box windows from E5
+name: build sing-box windows from debiansid
 
 on:
   workflow_dispatch:
@@ -23,8 +23,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository:  CHIZI-0618/sing-box
-          ref: dev-next
+          repository:  debiansid/sing-box
+          ref: dev-next-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
@@ -37,8 +37,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
-          ref: dev-next
+          repository: debiansid/sing-box
+          ref: dev-next-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
@@ -72,15 +72,15 @@ jobs:
           echo "RELEASE_NAME=Released on $(date +%Y%m%d%H)" >> $GITHUB_ENV
           echo "TAG_NAME=$(date +%Y%m%d%H)" >> $GITHUB_ENV
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          repository: CHIZI-0618/sing-box
-          ref: dev-next
+          repository: debiansid/sing-box
+          ref: dev-next-yaott
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.4
+          go-version: 1.21.5
       - name: Build
         id: build
         run: make
