--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -1,5 +1,4 @@
-name: Build SFA from CHIZI-0618
-
+name: Build SFA from official
 on:
   workflow_dispatch:
 
@@ -7,13 +6,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      TAGS: with_gvisor,with_quic,with_utls,with_clash_api,with_provider,with_conntrack
+      TAGS: "with_gvisor,with_quic,with_utls,with_clash_api,with_conntrack"
 
     steps:
       - name: Checkout core Repository
         uses: actions/checkout@v4
         with:
-         repository: CHIZI-0618/sing-box
+         repository: SagerNet/sing-box
          ref: dev-next
          fetch-depth: 0
 
@@ -24,7 +23,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.4'
+          go-version: '1.21.5'
 
       - name: Checkout SFA Repository
         uses: actions/checkout@v4
