--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -50,13 +50,13 @@ jobs:
           echo "VERSION_CODE=$(date +%Y%m%d%H)" >> local.properties
           sed -i '/signingConfigs\.release/d' app/build.gradle
           chmod +x ./gradlew
-          ./gradlew :app:assemblePlayRelease
+          ./gradlew assembleRelease 
 
       - name: Sign SFA
         uses: r0adkll/sign-android-release@v1
         id: sign_app
         with:
-             releaseDirectory: SFA/app/build/outputs/apk/play/release
+             releaseDirectory: SFA/app/build/outputs/apk/other/release
              signingKeyBase64: ${{ secrets.SIGNING_KEY }}
              alias: ${{ secrets.ALIAS }}
              keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
@@ -66,4 +66,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: SFA
-          path: SFA/app/build/outputs/apk/play/release/*arm64-v8a-unsigned-signed.apk
+          path: SFA/app/build/outputs/apk/other/release/*arm64-v8a-unsigned-signed.apk
