--- a/.github/workflows/sfa_outbound_providers.yml
+++ b/.github/workflows/sfa_outbound_providers.yml
@@ -27,7 +27,7 @@ jobs:
           go-version: 1.21.5
 
       - name: Checkout SFA Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: debiansid/sing-box-for-android
           path: SFA
@@ -37,7 +37,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'oracle'
-          java-version: 20
+          java-version: 21
 
       - name: Build SFA
         run: |
@@ -53,13 +53,13 @@ jobs:
           echo "VERSION_CODE=$(date +%Y%m%d%H)" >> local.properties
           sed -i '/signingConfigs\.release/d' app/build.gradle
           chmod +x ./gradlew
-          ./gradlew :app:assemblePlayRelease
+          ./gradlew assembleRelease
           
       - name: Sign SFA
         uses: r0adkll/sign-android-release@v1
         id: sign_app
         with:
-             releaseDirectory: SFA/app/build/outputs/apk/play/release
+             releaseDirectory: SFA/app/build/outputs/apk/other/release
              signingKeyBase64: ${{ secrets.SIGNING_KEY }}
              alias: ${{ secrets.ALIAS }}
              keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
@@ -70,8 +70,8 @@ jobs:
         with:
           name: SFA-arm64-v8a
           path: |
-            SFA/app/build/outputs/apk/play/release/*-arm64-v8a-signed.apk
-            SFA/app/build/outputs/apk/play/release/*-arm64-v8a-*-signed.apk
+            SFA/app/build/outputs/apk/other/release/*-arm64-v8a-signed.apk
+            SFA/app/build/outputs/apk/other/release/*-arm64-v8a-*-signed.apk
 
      
       - name: Upload universal artifact
@@ -79,7 +79,7 @@ jobs:
         with:
           name: SFA-universal
           path: |
-            SFA/app/build/outputs/apk/play/release/*-universal-signed.apk
-            SFA/app/build/outputs/apk/play/release/*-universal-*-signed.apk
+            SFA/app/build/outputs/apk/other/release/*-universal-signed.apk
+            SFA/app/build/outputs/apk/other/release/*-universal-*-signed.apk
       
       
