--- a/.github/workflows/dev-next-win.yml
+++ b/.github/workflows/dev-next-win.yml
@@ -24,11 +24,11 @@ jobs:
         with:
           fetch-depth: 0
           repository:  debiansid/sing-box
-          ref: dev-next-yaott
+          ref: dev-next-provider
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.4
+          go-version: 1.21.5
   build_go120:
     name: Debug build (Go 1.21)
     runs-on: ubuntu-latest
@@ -38,11 +38,11 @@ jobs:
         with:
           fetch-depth: 0
           repository: debiansid/sing-box
-          ref: dev-next-yaott
+          ref: dev-next-provider
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.4
+          go-version: 1.21.5
   cross:
     strategy:
       matrix:
@@ -65,7 +65,7 @@ jobs:
       GOARM: ${{ matrix.goarm }}
       GOMIPS: ${{ matrix.gomips }}
       CGO_ENABLED: 1
-      TAGS: with_gvisor,with_quic,with_clash_api,with_utls,with_proxyprovider
+      TAGS: with_gvisor,with_quic,with_clash_api,with_utls,with_outbound_provider
     steps:
       - name: Set variables
         run: |
@@ -76,7 +76,7 @@ jobs:
         with:
           fetch-depth: 0
           repository: debiansid/sing-box
-          ref: dev-next-yaott
+          ref: dev-next-provider
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
