--- a/.github/workflows/SFA.yml
+++ b/.github/workflows/SFA.yml
@@ -57,7 +57,7 @@ jobs:
           echo "VERSION_CODE=$(date +%Y%m%d%H)" >> local.properties
           sed -i '/signingConfigs\.release/d' app/build.gradle
           chmod +x ./gradlew
-          ./gradlew assembleRelease 
+          ./gradlew assemblePlayRelease 
 
       - name: Sign SFA
         uses: r0adkll/sign-android-release@v1
@@ -76,4 +76,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: SFA
-          path: SFA/app/build/outputs/apk/other/release/*arm64-v8a-unsigned-signed.apk
+          path: SFA/app/build/outputs/apk/play/release/*arm64-v8a-unsigned-signed.apk
