--- a/.github/workflows/debiansid.yml
+++ b/.github/workflows/debiansid.yml
@@ -30,15 +30,15 @@ jobs:
         with:
           go-version: ^1.22
   build_go120:
-    name: Debug build (Go 1.21)
+    name: Debug build (Go 1.22)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          repository: rnetx/sing-box
-          ref: next
+          repository: debiansid/sing-box
+          ref: dev-next-rnetx
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
@@ -75,8 +75,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          repository: rnetx/sing-box
-          ref: next
+          repository: debiansid/sing-box
+          ref: dev-next-rnetx
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
