--- a/.github/workflows/e5-sfa.yml
+++ b/.github/workflows/e5-sfa.yml
@@ -6,11 +6,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      TAGS: "with_gvisor,with_quic,with_utls,with_clash_api,with_conntrack,with_provider"
+      TAGS: "with_gvisor,with_quic,with_utls,with_clash_api,with_conntrack"
 
     steps:
       - name: Checkout core Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.1.1
         with:
          repository: CHIZI-0618/sing-box
          fetch-depth: 0
@@ -25,7 +25,7 @@ jobs:
           go-version: ^1.22
 
       - name: Checkout SFA Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.1.1
         with:
           repository: SagerNet/sing-box-for-android
           path: SFA
