--- a/.github/workflows/reF1nd-sfa.yml
+++ b/.github/workflows/reF1nd-sfa.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
          repository: reF1nd/sing-box
-         ref: dev-strategy
+         ref: dev-routestrategy
          fetch-depth: 0
 
       - name: Get latest go version
