--- a/.github/workflows/strategy-core-1.8.yml
+++ b/.github/workflows/strategy-core-1.8.yml
@@ -1,4 +1,4 @@
-name: Build routestrategy core from debiansid 
+name: Build routestrategy core 1.8.x from debiansid 
 on:
   workflow_dispatch:
   schedule:
