--- a/.github/workflows/build-puernya-for-tony.yml
+++ b/.github/workflows/build-puernya-for-tony.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      TAGS: with_quic,with_gvisor,with_utls,with_ech,with_clash_api,with_outbound_provider
+      TAGS: with_quic,with_gvisor,with_utls,with_ech,with_wiregurad,with_clash_api,with_outbound_provider
     steps:
       - uses: actions/checkout@v4.1.1
         with:
