--- a/.github/workflows/reF1nd-sfa.yml
+++ b/.github/workflows/reF1nd-sfa.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           repository: SagerNet/sing-box-for-android
+          ref: dev
           path: SFA
           submodules: recursive
 
