--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 0
-          repository: shadowsocks-rust
+          repository: ruaue/shadowsocks-rust
           
 
       - name: Install toolchain if not cross-compiling
