--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -32,7 +32,7 @@ jobs:
           set -e
           CC=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang
           CXX=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang++
-          ~/.cargo/bin/cargo build --target
+          ~/.cargo/bin/cargo build --target aarch64-linux-android
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
