--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -25,14 +25,14 @@ jobs:
           add-to-path: false
           local-cache: false
 
-      - name: Build core
+      - name: Build ss-rust
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
         run: |
           set -e
           CC=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang
           CXX=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang++
-          ~/.cargo/bin/cargo build --target aarch64-linux-android
+          ~/.cargo/bin/cargo build  release --target aarch64-linux-android
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
