--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -22,8 +22,8 @@ jobs:
         uses: nttld/setup-ndk@v1
         id: setup-ndk
         with:
-          ndk-version: r26d
-          add-to-path: false
+          ndk-version: r26c
+          add-to-path: true
           local-cache: false
 
       - name: Build ss-rust
