--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -16,7 +16,8 @@ jobs:
 
       - name: Install toolchain if not cross-compiling
         uses: dtolnay/rust-toolchain@stable
-      
+        with: 
+         targets: aarch64-linux-android
 
       - name: Setup NDK
         uses: nttld/setup-ndk@v1
@@ -31,7 +32,6 @@ jobs:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
         run: |
           set -e
-          rustup target add aarch64-linux-android
           CC=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang
           CXX=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang++
           ~/.cargo/bin/cargo build  --release --target aarch64-linux-android
