--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -23,7 +23,7 @@ jobs:
         uses: nttld/setup-ndk@v1
         id: setup-ndk
         with:
-          ndk-version: r26c
+          ndk-version: r26d
           add-to-path: true
           local-cache: false
 
